# midnight-wasm-prover

./: Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: release.yml
src/: lib.rs  utils.rs
webpack-demo/: package.json  tsconfig.json  webpack.config.js
webpack-demo/public/midnight/zswap/sign/: pk
webpack-demo/src/: index.ts  prover-worker.ts  test-vectors.ts  worker-types.ts
